# loan_prediction_Update_web_App

./: .gitignore  README.md  requirements.txt
data/: loan_data.csv
src/: MLmodel.ipynb  app.py  model.pkl  pyproject.toml  streamlit_app.py
src/static/: style.css
src/templates/: index.html
