[project]
name = "loan-predict-web-app"
version = "0.1.0"
description = "Loan Prediction by input data through web"
authors = [
    {name = "N-Chanuuj-NC",email = "chanuujnavaretnam@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "ipykernel (>=7.2.0,<8.0.0)",
    "flask (>=3.1.3,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
